Deleting default dashboard
