# peachdashboardapi/assets/swagger/swaggerspec.json
@@ -41,7 +41,7 @@
         "tags": [
           "Dashboards"
         ],
-        "summary": "Creates a new default dashboard for a given role",
+        "summary": "New Default Dashboard",
         "description": "Creates a new default dashboard for a given role",
         "operationId": "postDashboardDefault",
         "consumes": [
@@ -114,6 +114,30 @@
             "description": "Default dashboard successfully updated"
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "Dashboards"
+        ],
+        "summary": "Deletes Default Dashboard",
+        "description": "Deletes an existing default dashboard",
+        "consumes": [],
+        "produces": [],
+        "parameters": [
+          {
+            "name": "dashboardId",
+            "in": "path",
+            "description": "Unique identifier for a dashboard",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "205": {
+            "description": "Existing default dashboard successfully deleted"
+          }
+        }
       }
     },
     "/dashboard/{dashboardId}": {
@@ -121,7 +145,7 @@
         "tags": [
           "Dashboards"
         ],
-        "summary": "Updates an existing dashboard.",
+        "summary": "Updates User Dashboard",
         "description": "Updates an existing dashboard.",
         "operationId": "putDashboardDashboardId",
         "consumes": [
@@ -156,7 +180,7 @@
         "tags": [
           "Dashboards"
         ],
-        "summary": "Deletes an existing dashboard.",
+        "summary": "Deletes User Dashboard",
         "description": "Deletes an existing dashboard.",
         "operationId": "deleteDashboardDashboardId",
         "consumes": [],
@@ -319,9 +343,7 @@
         "consumes": [
           "application/json"
         ],
-        "produces": [
-          "application/json"
-        ],
+        "produces": [],
         "parameters": [
           {
             "in": "body",
@@ -336,7 +358,10 @@
           "200": {
             "description": "Metric computed for the given datasource using the given filters and granularity",
             "schema": {
-              "$ref": "#/definitions/Metric"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/MetricData"
+              }
             }
           }
         }
@@ -787,19 +812,21 @@
     "MetricData": {
       "type": "object",
       "required": [
+        "date",
         "metric"
       ],
       "properties": {
+        "date": {
+          "type": "string",
+          "description": "Date according to granularity set"
+        },
         "metric": {
-          "type": "array",
-          "description": "The metric requested,",
-          "items": {
-            "type": "number",
-            "format": "double"
-          }
+          "type": "number",
+          "format": "double",
+          "description": "The metric requested,"
         }
       },
-      "description": "Any metric that can be represented with a double. It is an array that is returned according to the granularity as requested. If single element, then it is over the complete period. for e.g\n{ \"metric\" : [10, 20, 30, 40 , 10, 10] }"
+      "description": "Any metric that can be represented with a double. It is an array that is returned according to the granularity as requested. \n\n[\n  {\n    \"metric\": 108750,\n    \"date\": \"2010-01-01T00:00:00.000Z/2011-01-01T00:00:00.000Z\"\n  }\n]"
     },
     "Permission": {
       "type": "object",
@@ -1003,12 +1030,16 @@
       "properties": {
         "name": {
           "type": "string",
-          "description": "**not decided yet**"
+          "description": "Username of logged in user"
         },
         "roleId": {
           "type": "integer",
           "format": "int32",
           "description": "Unique identifier associated with a role"
+        },
+        "roleName": {
+          "type": "string",
+          "description": "Name of the role of logged in user"
         },
         "userId": {
           "type": "integer",
